--- a/Template.html
+++ b/Template.html
@@ -10,6 +10,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="./template.css">
 
+        <script>
+          var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+          var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl)
+          })
+        </script>
+
     </head>
     <body>
         <!--Navbar-->
@@ -86,6 +93,9 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
+                    <a type="button" class="d-inline-block" data-bs-toggle="tooltip" data-bs-placement="right" title="Tooltip on right">
+                      <img class="info_svg" src="info-button.svg">
+                    </a>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   </div>
                 </div>
@@ -94,6 +104,9 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
+                    <a type="button" class="d-inline-block" data-bs-toggle="tooltip" data-bs-placement="right" title="Tooltip on right">
+                      <img class="info_svg" src="info-button.svg">
+                    </a>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   </div>
                 </div>
@@ -102,6 +115,9 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
+                    <a type="button" class="d-inline-block" data-bs-toggle="tooltip" data-bs-placement="right" title="Tooltip on right">
+                      <img class="info_svg" src="info-button.svg">
+                    </a>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   </div>
                 </div>
@@ -110,6 +126,9 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
+                    <a type="button" class="d-inline-block" data-bs-toggle="tooltip" data-bs-placement="right" title="Tooltip on right">
+                      <img class="info_svg" src="info-button.svg">
+                    </a>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   </div>
                 </div>
@@ -118,6 +137,9 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
+                    <a type="button" class="d-inline-block" data-bs-toggle="tooltip" data-bs-placement="right" title="Tooltip on right">
+                      <img class="info_svg" src="info-button.svg">
+                    </a>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   </div>
                 </div>
@@ -126,6 +148,9 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
+                    <a type="button" class="d-inline-block" data-bs-toggle="tooltip" data-bs-placement="right" title="Tooltip on right">
+                      <img class="info_svg" src="info-button.svg">
+                    </a>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
                   </div>
                 </div>
@@ -134,6 +159,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
+                    <img class="info_svg" src="info-button.svg">
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   </div>
                 </div>
