--- a/Template.html
+++ b/Template.html
@@ -82,6 +82,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">LOGOUT</a>
                   </li>
+                  <li class="nav-item">
+                    <button class="colour-change">CHANGE COLOUR</button>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -94,9 +97,9 @@
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI1_title">CITIZEN SCIENTISTS</h4>
                     <h6 class = "description" > images for classification </h6>
-                    {% autoescape off %}
+                    
                     <div id = KPI1_image1> {{ graph|safe }}</div>
-                    {% endautoescape %}
+                    
                     <!-- <img class = graph src="./KPI1.1.png" alt="" width="400" height="400"> -->
                     <!-- <script id="infogram_0_d76cdf3e-df91-4fc0-a846-b71af0bb79e5" title="Line Chart" src="https://e.infogram.com/js/dist/embed.js?yss" type="text/javascript"></script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><a href="https://infogram.com/d76cdf3e-df91-4fc0-a846-b71af0bb79e5" style="color:#989898!important;text-decoration:none!important;" target="_blank">Line Chart</a><br><a href="https://infogram.com" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Infogram</a></div> -->
                     <a type="button" class="d-inline-block" data-bs-toggle="tooltip" data-bs-placement="right" title="Tooltip on right">
@@ -168,12 +171,7 @@
               </div>
             </div>
   
-
-
-
-
-
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     </body>
 </html>
