changes all popovers to dissmissable

--- a/Template copy.html
+++ b/Template copy.html
@@ -124,8 +124,8 @@
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI2_title">Image sequences</h4>
                     <h6 class = "description" > images for classification </h6>
-                    <button type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Right popover">
-                    </button>
+                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
+                    </a>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   </div>
                 </div>
@@ -135,8 +135,8 @@
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI3_title">Classification</h4>
                     <h6 class = "description" > images for classification </h6>
-                    <button type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Right popover">
-                    </button>
+                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
+                    </a>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   </div>
                 </div>
@@ -146,8 +146,8 @@
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI4_title">Quantity/quality/coverage of data in </h4>
                     <h6 class = "description" > images for classification </h6>
-                    <button type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Right popover">
-                    </button>
+                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
+                    </a>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   </div>
                 </div>
@@ -157,8 +157,8 @@
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI5_title">Impact</h4>
                     <h6 class = "description" > images for classification </h6>
-                    <button type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Right popover">
-                    </button>
+                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
+                    </a>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   </div>
                 </div>
@@ -168,8 +168,8 @@
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI6_title">Funding</h4>
                     <h6 class = "description" > images for classification </h6>
-                    <button type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Right popover">
-                    </button>
+                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
+                    </a>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
                   </div>
                 </div>
