--- a/Template.html
+++ b/Template.html
@@ -8,7 +8,7 @@
 
         <!--Bootstrap CSS-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="./template.css">
+        <link id="theme" rel="stylesheet" href="./template.css">
 
         <script>
           var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
@@ -27,6 +27,16 @@
             trigger: 'focus'
           })
           
+          function toggleTheme() {
+            var theme = document.getElementsByTagName('link')[1];
+
+            if (theme.getAttribute('href') == './template.css') {
+                theme.setAttribute('href', './alt_template.css');
+            } else {
+                theme.setAttribute('href', './template.css');
+            }
+        }
+
         </script>
 
     </head>
@@ -95,7 +105,7 @@
                     <a class="nav-link" href="#">LOGOUT</a>
                   </li>
                   <li class="nav-item">
-                    <button class="colour-change">CHANGE COLOUR</button>
+                    <button class="colour-change" onclick="toggleTheme()">CHANGE COLOUR</button>
                   </li>
                 </ul>
               </div>
