--- a/Template.html
+++ b/Template.html
@@ -121,11 +121,14 @@
                     <h6 class = "description" > images for classification </h6>
                     <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
                     </a>
-                    <div id = KPI1_image1> {{ graph|safe }}</div>
-                    
-                    <!-- <img class = graph src="./KPI1.1.png" alt="" width="400" height="400"> -->
-                    <!-- <script id="infogram_0_d76cdf3e-df91-4fc0-a846-b71af0bb79e5" title="Line Chart" src="https://e.infogram.com/js/dist/embed.js?yss" type="text/javascript"></script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><a href="https://infogram.com/d76cdf3e-df91-4fc0-a846-b71af0bb79e5" style="color:#989898!important;text-decoration:none!important;" target="_blank">Line Chart</a><br><a href="https://infogram.com" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Infogram</a></div> -->
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <hr>
+                    <canvas id="KPI1ag1"></canvas>
+                    <!-- <hr>
+                    <canvas id="KPI1ag2"></canvas> -->
+                    <hr>
+                    <canvas id="KPI1bg1"></canvas>
+                    <!-- <hr>
+                    <canvas id="KPI1bg2"></canvas> -->
                   </div>
                 </div>
               </div>
@@ -136,7 +139,14 @@
                     <h6 class = "description" > images for classification </h6>
                     <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
                     </a>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <hr>
+                    <canvas id="KPI2ag1"></canvas>
+                    <!-- <hr>
+                    <canvas id="KPI2ag2"></canvas> -->
+                    <hr>
+                    <canvas id="KPI2bg1"></canvas>
+                    <!-- <hr>
+                    <canvas id="KPI2bg2"></canvas> -->
                   </div>
                 </div>
               </div>
@@ -147,7 +157,10 @@
                     <h6 class = "description" > images for classification </h6>
                     <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
                     </a>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <hr>
+                    <canvas id="KPI3ag1"></canvas>
+                    <hr>
+                    <canvas id="KPI3dg1"></canvas>
                   </div>
                 </div>
               </div>
@@ -158,7 +171,8 @@
                     <h6 class = "description" > images for classification </h6>
                     <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
                     </a>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <hr>
+                    <canvas id="KPI4g1"></canvas>
                   </div>
                 </div>
               </div>
@@ -169,7 +183,8 @@
                     <h6 class = "description" > images for classification </h6>
                     <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
                     </a>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <hr>
+                    <canvas id="KPI5g1"></canvas>
                   </div>
                 </div>
               </div>
@@ -180,7 +195,8 @@
                     <h6 class = "description" > images for classification </h6>
                     <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
                     </a>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                    <hr>
+                    <canvas id="KPI6g1"></canvas>
                   </div>
                 </div>
               </div>
@@ -188,6 +204,9 @@
 
   
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+        <script src="charts.js"></script>
 
     </body>
 </html>
