updating the descriptions

--- a/Template.html
+++ b/Template.html
@@ -119,7 +119,7 @@
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI1_title">CITIZEN SCIENTISTS</h4>
                     <h6 class = "description" > images for classification </h6>
-                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
+                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="The citizen scientists KPI portrays information and data for the citizens of different countries who provide MammalWeb with their mammal sightings. This KPI will allow you to see how our users around the UK and Europe have interacted with our platform">
                     </a>
                     <hr>
                     <canvas id="KPI1ag1"></canvas>
@@ -137,7 +137,7 @@
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI2_title">Image sequences</h4>
                     <h6 class = "description" > images for classification </h6>
-                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
+                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="See how numbers of contributed image sequences and videos have accumulated over time.">
                     </a>
                     <hr>
                     <canvas id="KPI2ag1"></canvas>
@@ -155,7 +155,7 @@
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI3_title">Classification</h4>
                     <h6 class = "description" > images for classification </h6>
-                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
+                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="The classification KPI represents data and trends of the classification of different animals during mammal spotting. See the number of different classifications made, including that of image sequences with complete classifications including the total number of animals identified. ">
                     </a>
                     <hr>
                     <canvas id="KPI3ag1"></canvas>
@@ -169,7 +169,11 @@
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI4_title">Quantity/quality/coverage of data in </h4>
                     <h6 class = "description" > images for classification </h6>
-                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
+                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="The quantity/quality/coverage of data KPI represents the metadata about all the sightings and images uploaded. As MammalWeb “help(s) monitor wild mammals across the UK and in continental Europe”, and most classifications occur in the UK, a map of the UK which is divided into 10k cells portrays the data on the top 5 animals classified within the specified longitude square. The map is interactive and allows you to see all the animals that have been spotted in the specified area, if no sightings were seen in the specific cell no data is portrayed and you get a message explaining so. 
+
+                    For Europe there is a table depicting the number of countries with sites and the total number of sites. A site is a location at which a mammal was spotted and classified, a country appears on the table if at least one location was used within the country and the total number of sites is the total number of sites across all the countries in Europe.
+                    
+                    ">
                     </a>
                     <hr>
                     <canvas id="KPI4g1"></canvas>
@@ -181,7 +185,7 @@
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI5_title">Impact</h4>
                     <h6 class = "description" > images for classification </h6>
-                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
+                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="The ‘Impact’ KPI represents data in retrospect to the impact that MammalWeb and its data have created in the wider community. This would include data about the number of peer-reviewed papers and citations which have used data from MammalWeb’s website. Records submitted to ERIC/NBN/GBIF are also portrayed in a table. ">
                     </a>
                     <hr>
                     <canvas id="KPI5g1"></canvas>
@@ -193,7 +197,7 @@
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI6_title">Funding</h4>
                     <h6 class = "description" > images for classification </h6>
-                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="Right popover">
+                    <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="MammalWeb has always been grateful for all the support and contracts they have received. The funding KPI has three specific sections, the first being the total number of grants and contracts received, over the last year. The total value of the grants received is portrayed as a line graph over the past few years and the final table portrays all the other income for MammalWeb, including advertising, sponsorship, donations and subscriptions seen in a bar chart per section. All the currencies are portrayed in GBP (£).">
                     </a>
                     <hr>
                     <canvas id="KPI6g1"></canvas>
