--- a/Template.html
+++ b/Template.html
@@ -118,14 +118,16 @@
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI1_title">CITIZEN SCIENTISTS</h4>
-                    <h6 class = "description" > images for classification </h6>
                     <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="The citizen scientists KPI portrays information and data for the citizens of different countries who provide MammalWeb with their mammal sightings. This KPI will allow you to see how our users around the UK and Europe have interacted with our platform">
                     </a>
                     <hr>
+                    <h6 class = "description" > images for classification </h6>
+
                     <canvas id="KPI1ag1"></canvas>
                     <!-- <hr>
                     <canvas id="KPI1ag2"></canvas> -->
                     <hr>
+                    <h6 class = "description" > classifying images </h6>
                     <canvas id="KPI1bg1"></canvas>
                     <!-- <hr>
                     <canvas id="KPI1bg2"></canvas> -->
@@ -136,14 +138,15 @@
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI2_title">Image sequences</h4>
-                    <h6 class = "description" > images for classification </h6>
                     <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="See how numbers of contributed image sequences and videos have accumulated over time.">
                     </a>
                     <hr>
+                    <h6 class = "description" > Number of camera-days</h6>
                     <canvas id="KPI2ag1"></canvas>
                     <!-- <hr>
                     <canvas id="KPI2ag2"></canvas> -->
                     <hr>
+                    <h6 class = "description" > Number of image sequences uploaded</h6>
                     <canvas id="KPI2bg1"></canvas>
                     <!-- <hr>
                     <canvas id="KPI2bg2"></canvas> -->
@@ -154,12 +157,13 @@
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI3_title">Classification</h4>
-                    <h6 class = "description" > images for classification </h6>
                     <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="The classification KPI represents data and trends of the classification of different animals during mammal spotting. See the number of different classifications made, including that of image sequences with complete classifications including the total number of animals identified. ">
                     </a>
                     <hr>
+                    <h6 class = "description" > Number of classification "events"</h6>
                     <canvas id="KPI3ag1"></canvas>
                     <hr>
+                    <h6 class = "description" > Number of animals (mammals/birds) identified</h6>
                     <canvas id="KPI3dg1"></canvas>
                   </div>
                 </div>
