started working on getting the dashboard to automatically update

--- a/Template.html
+++ b/Template.html
@@ -11,6 +11,7 @@
         <link id="theme" rel="stylesheet" href="./template.css">
 
         <script>
+          window.onload = 'reloadData.js'
           var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
           var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
             return new bootstrap.Tooltip(tooltipTriggerEl)
@@ -216,6 +217,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
         <script src="charts.js"></script>
+        <script type="module" src="reloadData.js"></script> 
 
     </body>
 </html>
