--- a/Template.html
+++ b/Template.html
@@ -54,7 +54,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                    <a class="nav-link active" href="#" id ="home">HOME</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -63,7 +63,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                       <li><a class="dropdown-item" href="#">Action</a></li>
                       <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#">KPI dashboard</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -276,11 +276,24 @@
                 <div class="card">
                   <div class="card-body">
                     <h4 class="card-title" id = "KPI6_title">Funding</h4>
-                    <h6 class = "description" > images for classification </h6>
+                    <h6 class = "description" > Number of Grants and Contracts </h6>
                     <a tabindex="0" type="button" class="button" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-placement="right" data-bs-content="MammalWeb has always been grateful for all the support and contracts they have received. The funding KPI has three specific sections, the first being the total number of grants and contracts received, over the last year. The total value of the grants received is portrayed as a line graph over the past few years and the final table portrays all the other income for MammalWeb, including advertising, sponsorship, donations and subscriptions seen in a bar chart per section. All the currencies are portrayed in GBP (£).">
                     </a>
                     <hr>
-                    <canvas id="KPI6g1"></canvas>
+                    <table  class = "KPItable", id="KPI6table">
+                      <thead>
+                          <tr>
+                              <th > Last year </th>
+                              <th > All Time </th>
+                          </tr>
+                          <tbody>
+                            <tr>
+                                <td > 2 </td>
+                                <td > 235 </td>
+                            </tr>
+                          </tbody>
+                      </thead>
+                    </table>
                   </div>
                 </div>
               </div>
